Revision history for Perl module WebService::DetectLanguage

0.04 2019-07-17 NEILB
    - Require 5.010 -- I use // in multiple places

0.03 2019-07-15 NEILB
    - Bugfix: due to HTTP::Tiny's post_form() behaviour, multiple strings
      weren't always being passed in the expected order.
    - Added tests based on mocking HTTP::Tiny, which is what revealed the
      above bug.
    - Added clarification to the doc on handling the is_reliable flag,
      after having email with the service provider.

0.02 2019-07-12 NEILB
    - Added a bunch more documentation

0.01 2019-07-07 NEILB
    - First release to CPAN
